# ohnope

./: .gitignore  MANIFEST.in  Makefile  README.md  makebadge.py  pyproject.toml  setup.cfg  validate.json
.github/workflows/: document.yml  validate.yml
ohnope/: __init__.py  conftest.py
ohnope/execution/: crypts.py  service.py
ohnope/ohnope/: __init__.py  config.py  ohnope.py
ohnope/plugins/: __init__.py
require/: develop.txt  install.txt
sphinx/: conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  ohnope.execution.html  ohnope.execution.test.html  ohnope.html  ohnope.ohnope.html  ohnope.ohnope.params.html  ohnope.ohnope.test.html  ohnope.plugins.chanserv.html  ohnope.plugins.chatserv.html  ohnope.plugins.helpserv.html  ohnope.plugins.hostserv.html  ohnope.plugins.html  ohnope.plugins.memoserv.html  ohnope.plugins.nickserv.html  ohnope.plugins.operserv.html  ohnope.plugins.rootserv.html  ohnope.plugins.statserv.html  py-modindex.html  search.html  searchindex.js
sphinx/_sources/: index.rst.txt  modules.rst.txt  ohnope.execution.rst.txt  ohnope.execution.test.rst.txt  ohnope.ohnope.params.rst.txt  ohnope.ohnope.rst.txt  ohnope.ohnope.test.rst.txt  ohnope.plugins.chanserv.rst.txt  ohnope.plugins.chatserv.rst.txt  ohnope.plugins.helpserv.rst.txt  ohnope.plugins.hostserv.rst.txt  ohnope.plugins.memoserv.rst.txt  ohnope.plugins.nickserv.rst.txt  ohnope.plugins.operserv.rst.txt  ohnope.plugins.rootserv.rst.txt  (+3 more)
validate/: coverage.txt  flake8.txt  index.json  mypy.txt  pylint.txt  pytest.txt  ruff.txt  sphinx.txt  yamllint.txt
(+41 files in other folders)
